# social2.0

./: pyproject.toml
backend/: .coverage  db.sqlite3
backend/chat/: consumers.py  models.py  routing.py  serializers.py  urls.py  utils.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_rename_body_messages_content.py
backend/chat/tests/: test_channels.py  test_request.py
backend/frontend/src/: App.jsx  index.js  index.module.css  store.js
backend/src/: asgi.py  settings.py  urls.py
backend/static/: asset-manifest.json  index.html
backend/static/css/: main.ce2a1dbe.css  main.ce2a1dbe.css.map
backend/static/js/: main.f4e6542b.js
backend/templates/admin/: base_site.html
backend/twitter/: admin.py  models.py  serializers.py  urls.py  views.py
backend/twitter/migrations/: 0001_initial.py  0002_alter_posts_image.py  0002_initial.py  0003_alter_posts_image.py  0003_profile.py  0004_alter_posts_image_images.py  0004_alter_profile_friends.py  0005_profile_timestamp.py
backend/twitter/tests/: conftest.py  test_models.py  test_profile.py  test_urls.py  test_views.py
backend/user/: admin.py  serializers.py  views.py
backend/user/migrations/: 0001_initial.py  0002_alter_user_date_joined_alter_user_email.py  0003_alter_user_date_joined.py  0004_alter_user_email.py  0005_alter_user_image.py
backend/user/tests/: test_models.py
frontend/: .env  \  package-lock.json  package.json
frontend/src/: App.jsx  index.css  index.js  index.module.css  store.js
frontend/src/actions/: auth copy.js  auth.js  types.js
frontend/src/components/: Avatar.jsx  (+13 more)
(+37 files in other folders)
